[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( -0.5, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]

[editable path="Hitbox"]
